grpcClientTestingDyanmic/kubernetesYaml/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientfeaturediscovery
  namespace: akash-services
  labels:
    app: clientfeaturediscovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientfeaturediscovery
  template:
    metadata:
      labels:
        app: clientfeaturediscovery
    spec:
      serviceAccountName: clientfeaturediscovery-sa
      containers:
      - name: clientfeaturediscovery
        image: scarruthers/clientfeaturediscovery:v24
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
